Tidied up footer and any layout issues in post
Now the footer is working website is basically functional. Layout wise just need to proof-read content add in some stuff and images. But images would require a bit of compressing so will do that as well

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,11 @@
+html,
 body {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* prevent horizontal scrollbars on mobile */
+}
+
+body {
   font-family: var(--font-main);
   line-height: var(--line-unit);
 }
